app-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-two
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app-two
  template:
    metadata:
      labels:
        app: java-app-two
    spec:
      containers:
      - name: java-app-container
        image: bnsdcr/java_app
        ports:
        - containerPort: 80
