app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-one
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app-one
  template:
    metadata:
      labels:
        app: java-app-one
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: DoesNotExist
      containers:
      - name: java-app-container
        image: bnsdcr/java_app
        ports:
        - containerPort: 9001
        resources:
          requests:
            cpu: "40m"
          limits:
            cpu: "200m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-two
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app-two
  template:
    metadata:
      labels:
        app: java-app-two
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: DoesNotExist
      containers:
      - name: java-app-container
        image: bnsdcr/java_app
        ports:
        - containerPort: 9001
