app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-one
spec:
  selector:
    app: java-app-one
  ports:
    - port: 80
      targetPort: 9001 #dockerport
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-two
spec:
  selector:
    app: java-app-two
  ports:
    - port: 80
      targetPort: 9001  
  type: ClusterIP
