app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: bn.local
    http:
      paths:
      - path: /api\/foos\?val=[A-La-l0-9_-]+$
        pathType: Prefix
        backend:
          service:
            name: java-app-one
            port:
              number: 80
      - path: /api\/foos\?val=[M-Zm-z_-]+$
        pathType: Prefix
        backend:
          service:
            name: java-app-two
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: java-app-one
            port:
              number: 80
